force-app/main/default/objects/QCC_ValidFlightEvent__mdt/QCC_ValidFlightEvent__mdt.object-meta.xml
<CustomObject>
    <description>QCC: Table to validate if Flight Event record should be created or not</description>
    <label>QCC Valid Flight Event</label>
    <pluralLabel>QCC Valid Flight Events</pluralLabel>
</CustomObject>