force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/CheckCriteria__c.field-meta.xml
<CustomField>
    <fullName>CheckCriteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: To determine if Event to be created immediately or based on Criteria</description>
    <label>Check Criteria</label>
    <type>Checkbox</type>
</CustomField>