force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/CreateEventRecord__c.field-meta.xml
<CustomField>
    <fullName>CreateEventRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Event Record will be created only if this field is set to true</description>
    <label>Create Event Record</label>
    <type>Checkbox</type>
</CustomField>