force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/CreateFlightFailRecords__c.field-meta.xml
<CustomField>
    <fullName>CreateFlightFailRecords__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Flight Fail Records</label>
    <type>Checkbox</type>
</CustomField>