force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>QCC: Criteria to be validated</description>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>