force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/FailureCode__c.field-meta.xml
<CustomField>
    <fullName>FailureCode__c</fullName>
    <description>QCC: All Possible Delay and Non Delay Failure code that can be received from QSOA</description>
    <label>Failure Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diversion Due to Mechanical</fullName>
                <default>true</default>
                <label>Diversion Due to Mechanical</label>
            </value>
            <value>
                <fullName>Diversion Due to Medical</fullName>
            </value>
            <value>
                <fullName>Diversion Due to Weather</fullName>
            </value>
            <value>
                <fullName>Diversion Due to Other</fullName>
            </value>
            <value>
                <fullName>A/C Downgrade</fullName>
            </value>
            <value>
                <fullName>Air Turn Back</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Flight Cancellation</fullName>
            </value>
            <value>
                <fullName>IFE Failure - Full</fullName>
            </value>
            <value>
                <fullName>IFE Failure - Partial</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Strike Action</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Flight Delay</fullName>
            </value>
            <value>
                <fullName>Add Stop</fullName>
            </value>
            <value>
                <fullName>Flight Delay Between 5 and 20 Hours</fullName>
                <isActive>false</isActive>
                <label>Flight Delay Between 5 and 20 Hours</label>
            </value>
            <value>
                <fullName>Flight Delay Greater than 20 Hours</fullName>
                <isActive>false</isActive>
                <label>Flight Delay Greater than 20 Hours</label>
            </value>
            <value>
                <fullName>Flight Delay Less than 5 Hours</fullName>
                <isActive>false</isActive>
                <label>Flight Delay Less than 5 Hours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>