force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/Flight_Status__c.field-meta.xml
<CustomField>
    <fullName>Flight_Status__c</fullName>
    <description>QCC: Status of Flight based on Event type</description>
    <label>Flight Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEPARTED</fullName>
                <default>true</default>
                <label>DEPARTED</label>
            </value>
            <value>
                <fullName>LANDED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>