force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/PostFlight__c.field-meta.xml
<CustomField>
    <fullName>PostFlight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Valid Post Flight Value for a Failure</description>
    <label>Post Flight</label>
    <type>Checkbox</type>
</CustomField>