force-app/main/default/objects/QCC_ValidFlightEvent__mdt/fields/PreFlight__c.field-meta.xml
<CustomField>
    <fullName>PreFlight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QCC: Valid Pre Flight Value for a Failure</description>
    <label>Pre Flight</label>
    <type>Checkbox</type>
</CustomField>