force-app/main/default/objects/QCC_ValidFlightEvent__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DeveloperName</columns>
    <columns>CreateEventRecord__c</columns>
    <columns>FailureCode__c</columns>
    <columns>Flight_Status__c</columns>
    <columns>Priority__c</columns>
    <columns>MasterLabel</columns>
    <columns>NamespacePrefix</columns>
    <columns>CreateFlightFailRecords__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>