force-app/main/default/objects/QCC_ValidFlightEvent__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CheckCriteria__c</columns>
    <columns>CreateEventRecord__c</columns>
    <columns>CreateFlightFailRecords__c</columns>
    <columns>Criteria__c</columns>
    <columns>FailureCode__c</columns>
    <columns>Flight_Status__c</columns>
    <columns>PostFlight__c</columns>
    <columns>PreFlight__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>